<resources>
    <string name="app_name">妈咪宝贝</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_message">消息</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">主页</string>
    <string name="circle">圈子</string>
    <string name="found">发现</string>
    <string name="movement">活动</string>
    <string name="personal">我</string>
    <string name="personal_text">个人中心</string>
    <string name="sigin_in">已签到</string>
    <string name="home_btn_hot">热帖</string>
    <string name="home_btn_find">发现美丽</string>
    <string name="home_btn_sale">买买买</string>
    <string name="home_btn_doneat">不能吃</string>
    <string name="home_btn_friends">朋友圈</string>
    <string name="find_bty">发现美丽</string>
    <string name="sort">排序</string>
    <string name="chat">聊天</string>
    <string name="settings">设置</string>
    <string name="gift">礼物</string>
    <string name="message">消息</string>
    <string name="item_found_camera">亲子相机</string>
    <string name="hello">Hello World, XListViewActivity!</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="loadmore">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="data_load_error">数据加载失败</string>
    <string name="title_activity_find_content">FindContentActivity</string>
    <string name="tag_expression">TAG_EXPRESSION_FRG</string>
    <string name="reply_empty_tip">回复内容不能为空!</string>
    <string name="back">返回</string>
    <string name="floor">楼</string>
    <string name="title_activity_diary_list">DiaryListActivity</string>
    <string name="mydiary">心情日记</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_diary">DiaryActivity</string>
    <string name="my_add_diary">我的日记</string>
    <string name="write_something">写点什么...</string>
    <string name="select_from_album">从相册中选取</string>
    <string name="take_photo">拍照获取</string>
    <string name="title_activity_noeat">NoeatActivity</string>
    <string name="search_hint">输入食物名称，看能不能吃</string>
    <string name="title_activity_noeat_search_result">NoeatSearchResultActivity</string>
    <string name="not_eat">不能吃哟</string>
    <string name="search">搜搜</string>
    <string name="search_tip1">大家都在搜</string>
    <string name="eat1">主食</string>
    <string name="eat2">坚果类</string>
    <string name="eat3">奶/奶制品</string>
    <string name="eat4">零食小吃</string>
    <string name="eat5">饮料</string>
    <string name="eat6">调味品</string>
    <string name="eat7">水产品</string>
    <string name="eat8">水果</string>
    <string name="eat9">蛋/肉类</string>
    <string name="eat10">蔬菜</string>
    <string name="eat11">烘焙食品</string>
    <string name="eat12">补品/草药</string>
    <string name="search_tip2">选择食物类型</string>
    <string name="mm">孕妈</string>
    <string name="yz">月子</string>
    <string name="br">哺乳</string>
    <string name="ye">婴儿</string>
    <string name="search_result_title">查询结果</string>
    <string name="key_word">请输入关键字</string>
    <string name="title_activity_noeat_detail">NoeatDetail</string>
    <string name="eat_yes">能吃</string>
    <string name="eat_danger">慎吃</string>
    <string name="eat_no">不能吃</string>
    <string name="title_activity_bbs">BbsActivity</string>
    <string name="hot_bbs">热帖</string>
    <string name="edit">编辑</string>
    <string name="last_time">刚刚</string>
    <string name="load_error">数据加载异常</string>
    <string name="have_no_network">未发现网络连接</string>
    <string name="hot_bbs_name">热帖</string>
    <string name="title_activity_base_web">BaseWebActivity</string>
    <string name="refresh">刷新</string>
    <string name="tiezi">帖子：</string>
    <string name="huifu">回复：</string>
    <string name="to_top">置顶</string>
    <string name="title_activity_find_beauty">FindBeautyActivity</string>
    <string name="title_activity_local_music">LocalMusicActivity</string>
    <string name="local_music">本地歌曲</string>

</resources>
