<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_main_mail"
        android:title="@string/action_message"
        android:icon="@drawable/actionbar_mail"
        app:showAsAction="always"
        android:visible="false"
        />
    <item android:id="@+id/action_main_settings"
          android:title="@string/settings"
          android:icon="@drawable/actionbar_settings"
          app:showAsAction="always"
          android:visible="false"
        />
    <item android:id="@+id/action_main_mygift"
          android:title="@string/gift"
          android:icon="@drawable/actionbar_mygift"
          app:showAsAction="always"
          android:visible="false"
        />

</menu>
